# PicoADK-Firmware-Template

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  FreeRTOS_Kernel_import.cmake  GettingStarted.md  LICENSE.md  README.md  build-firmware-docker.sh  default.ld.in  installing_on_windows.md  mkdocs.yml
.cache/clangd/index/: FreeRTOS.h.98EE8484055E6DEB.idx  FreeRTOSConfig.h.B2E0025ECB4A094D.idx  HeavyContext.cpp.437E3BB475CC72C4.idx  HeavyContext.hpp.DE1C0EBF5C9D7682.idx  HeavyContextInterface.hpp.5FB3E550A52D5D3B.idx  Heavy_prog.cpp.180419013406D5C2.idx  Heavy_prog.hpp.8DCC2BD01A045C50.idx  HvControlBinop.c.44F7B0E44ADB0F8F.idx  HvControlBinop.h.23C901BF4454372C.idx  HvControlCast.c.92C4F2229255EA2A.idx  HvControlCast.h.4EBA2A7687F19D81.idx  HvControlDelay.c.11547F5768D467C1.idx  HvControlDelay.h.17689C28D1CFDF7B.idx  HvControlIf.c.56A8EA32F138F74A.idx  HvControlIf.h.8E8A9367CDB69EDD.idx  HvControlPrint.h.0CB473DA607FBFB2.idx  HvControlRandom.c.F3A7E9934742EB9B.idx  HvControlRandom.h.C9C0793AE2921A83.idx  HvControlSlice.c.80FCFB5AE33774C8.idx  HvControlSlice.h.DF2B45F47BDE27BB.idx  HvControlSystem.c.333D3D530B9D1860.idx  HvControlSystem.h.42C41876D83E706B.idx  HvControlUnop.c.A734BD4777C0811C.idx  HvControlUnop.h.03EBE8D85A274777.idx  HvControlVar.c.693D56EFF3DCC4A6.idx  HvControlVar.h.997E686CF469B8F3.idx  HvHeavy.cpp.98B7082D3C17F258.idx  HvHeavy.h.232546CA2D68241E.idx  HvHeavyInternal.h.827E2D48547E69E5.idx  HvLightPipe.c.C00AA7175126F107.idx  HvLightPipe.h.C2BA34A2720873C7.idx  HvMath.h.7B39A80FF0253730.idx  HvMessage.c.C029CAEE16DC7551.idx  HvMessage.h.249E2FA9688121A1.idx  HvMessagePool.c.7FAC26597B06651C.idx  HvMessagePool.h.73667FDD40120A5D.idx  HvMessageQueue.c.B31B423CFA7A7D34.idx  HvMessageQueue.h.A5E5319790876CEF.idx  HvSignalBiquad.h.075E3F8DDB44EA31.idx  HvSignalDel1.c.C320D928B79AEE7F.idx  (+345 more)
.github/workflows/: build.yml  build_cmake.yml
boards/: datanoisetv_rp2040_dsp.h  datanoisetv_rp2350_dsp.h  picoadk_board.h  picoadk_v1.h  picoadk_v2.h  picoadk_v2_psram.ld
cmake/: CMakeDetermineVULTCompiler.cmake  CMakeTestVULTCompiler.cmake  CMakeVULTCompiler.cmake.in  CMakeVULTInformation.cmake
cmake/picoadk/: board.cmake  freertos.cmake  libpd.cmake  sdfat.cmake  sdio.cmake  vult.cmake
docs/: ARCHITECTURE.md  HAL.md  OVERCLOCKING.md  conf.py  hardware_reference.md  hvcc.md  index.rst  requirements.in  requirements.txt
docs/docs/: getting_started.md  index.md
examples/00_template/: CMakeLists.txt  main.cpp
examples/01_passthrough/: CMakeLists.txt  main.cpp
examples/02_synth_vult/: CMakeLists.txt  main.cpp
examples/03_fx_rack/: CMakeLists.txt  main.cpp
examples/04_multisampler/: CMakeLists.txt  main.cpp
examples/05_midi_controller/: CMakeLists.txt  main.cpp
examples/06_sf2_player/: CMakeLists.txt  main.cpp
include/: FreeRTOSConfig.h  arduino_compat.h  audio_subsystem.h  helper.h  luaInterface.h  luaProjectConfig.h  lwipopts.h  midi_input_usb.h  pdmain.h  picoadk_hw.h  project_config.h  psram.h  tusb_config.h  vultin.h
include/picoadk/: picoadk.h
include/picoadk/dsp/: effects.h  filters.h  math.h  modules.h  pd.h  real.h  sample_player.h  sf2.h
include/picoadk/hal/: audio.h  buttons.h  controls.h  display.h  encoders.h  gfx.h  hardware.h  midi.h  mux.h  pins.h  psram.h  storage.h  system.h  usb_device.h  usb_host.h  voicelink.h
include/picoadk/midi/: general_handler.h  launchpad.h
lib/audio/: CMakeLists.txt
lib/audio/include/: audio.h  audio_i2s.h  audio_subsystem.h  sample_conversion.h
lib/audio/piosrc/: audio_i2s.pio
lib/audio/src/: audio_i2s.c  audio_subsystem.cpp
lib/audio_new/: CMakeLists.txt
lib/audio_new/include/: i2s.h
lib/audio_new/piosrc/: i2s.pio
lib/audio_new/src/: i2s.c
lib/heavy/: CMakeLists.txt  Heavy_prog.cpp  Heavy_prog.h  Heavy_prog.hpp  HvControlRandom.c
lib/heavy/.oldheavy/: Heavy_prog.hpp
lib/oled/: CMakeLists.txt
lib/oled/include/: font.h  oled.h
lib/oled/src/: oled.cpp
lib/pd/: CMakeLists.txt
lib/pd/src/: m_local.h  m_pd.h  x_vexp.h
lib/tlsf/: tlsf.c  tlsf.h
lib/tlsf/.github/workflows/: issue_comment.yml  new_issues.yml  new_prs.yml
piosrc/: nop.pio
site/: 404.html  index.html  requirements.txt  search.html
site/getting_started/: index.html
site/hardware_reference/: index.html
site/search/: search_index.json
src/: audio.cpp  fsdata_custom.c  luaInterface.c  main.cpp  midi_input_usb.cpp  pdmain.c  picoadk_hw.cpp  psram.cpp  usb_descriptors.c
src/dsp/: effects.cpp  filters.cpp  math.cpp  modules.cpp  pd.cpp  sample_player.cpp  sf2.cpp  tsf_impl.c  vultin.cpp
src/hal/: audio.cpp  audio_engine.cpp  audio_engine.h  audio_i2s.cpp  buttons.cpp  controls.cpp  display.cpp  encoders.cpp  hardware.cpp  mux.cpp  psram_rp2350.cpp  psram_stub.cpp  storage.cpp  system.cpp  voicelink.cpp
src/hal/pio/: i2s_stereo.pio  quad_decoder.pio  sdio_4bit.pio  tdm.pio
src/midi/: general_handler.cpp  launchpad.cpp  midi.cpp  midi_internal.h  midi_uart.cpp  midi_usb.cpp
src/usb/: get_serial.h  msc.cpp  tusb_config.h  usb_descriptors.c  usb_device.cpp  usb_host.cpp
tests/: CMakeLists.txt  psram_host_stub.cpp  storage_host_stub.cpp  test_compressor.cpp  test_delay.cpp  test_effects.cpp  test_envelope.cpp  test_filters.cpp  test_more_filters.cpp  test_oscillators.cpp  test_real_q16.cpp  test_robustness.cpp  test_sample_player.cpp  test_tlsf.cpp  test_voicelink_crc.cpp
tools/: pdexport  simplesub.py  vultc-arm  vultc-mac
vultsrc/: dsp.vult  filter.vult
